correct size of title on mobile devices

--- a/zadanie1/css/main.css
+++ b/zadanie1/css/main.css
@@ -153,9 +153,20 @@ position: relative;
 
 @media screen and (max-width: 600px) {
   html, body {
-    font-size: 12px;
+    font-size: 14px;
   }
   .header_img {
     display: none;
+  }
+  h1 {
+    text-transform: uppercase;
+    font-size: 5.5rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+  .subtitle_margin_top {
+    margin-top: 0rem;
   }
 }
